# sjclick

./: .gitignore  LICENSE  README.md  pyproject.toml
sjclick/: __init__.py  __main__.py  applications.py  configs.py  hub.py  tools.py  window.py
sjclick/window/: __init__.py  dialog.py  loading.py  login.py  tick_chart.py
