[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sjclick"
authors = [{name = "ypochien", email = "ypochien@gmail.com"}]
license = {file = "LICENSE"}
requires = ["shioaji","dearpygui"]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
